--- a/config-file/sevice.yaml
+++ b/config-file/sevice.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: spring-service
+  name: react-service
 spec:
   selector:
-    app: spring
+    app: react
   type: NodePort
 ports:
     - protocol: TCP
